--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -2079,6 +2079,6 @@
         <image name="town3.png" width="414" height="736"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QeH-ZW-iUe"/>
+        <segue reference="fdY-Je-BDf"/>
     </inferredMetricsTieBreakers>
 </document>
